# hash-checker

./: .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
hash_checker/: __init__.py
hashcheck/: main.py
tests/: test_hash_checker.py  test_hashcheck.py
