[project]
name = "hashcheck"
version = "0.1.3"
description = "Simple file hash checker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloup>=3.0.8",
]

[project.scripts]
hashcheck = "hashcheck.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
