[project]
name = "hashcheck"
version = "0.1.3"
description = "Simple file hash checker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloup>=3.0.8",
]

[project.scripts]
hashcheck = "hashcheck.main:main"

[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "pre-commit>=4.0.0",
    "pyrefly>=0.14.0",
    "pytest>=9.0.2",
    "python-semantic-release>=9.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore: release v{version} [skip ci]"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
